CSS/styles.css
img.intro {
  border-radius: 50%;
}

p.intro {
  font-family: Arial, Helvetica, sans-serif
  font-size: 14px;
  text-align: justify;
}

h2.intro {
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-style: bold;
  font-variant: small-caps;
  text-align: center;
}

